# pi-search

./: .gitignore  README.md  chudnovsky-binary-splitting.py  kmp.py  run
cmake/: build
cmake/pi-search/: CMakePresets.json  generate-pi.h  pi-search.cpp
cpp/pi-search/: build
cpp/pi-search/pi-search/: generate-pi.cpp  pi-search.cpp  pi-search.vcxproj  pi-search.vcxproj.filters
cpp/pi-search/pi-search/GMP/: gmp.h  gmpxx.h
cpp/pi-search/pi-search/x64/Debug/: pi-search.exe.recipe  pi-search.vcxproj.FileListAbsolute.txt  vc143.idb
cpp/pi-search/pi-search/x64/Debug/pi-search.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pi-search.lastbuildstate
cpp/pi-search/pi-search/x64/Release/pi-search.tlog/: pi-search.lastbuildstate
python/: chudnovskybinarysplitting.py  kmp.py  run  runner.py
submission/executable/cpp-executables/: .ninja_log  cmake_install.cmake
submission/executable/cpp-executables/.cmake/api/v1/reply/: index-2022-12-05T02-29-01-0841.json
submission/sources/cmake/: .gitignore
submission/sources/cmake/pi-search/: CMakeLists.txt  generate-pi.h  pi-search.h
submission/sources/python/: chudnovsky-binary-splitting.py  kmp.py
